# GT-HMI-Engine

./: CMakeLists.txt  LICENSE  README.md  gt.h  gui.mk
src/: CMakeLists.txt  code_interfaces.js  gt_api_mapper.h  gt_conf.h
src/core/: gt_core.mk  gt_disp.c  gt_disp.h  gt_draw.c  gt_draw.h  gt_event.c  gt_event.h  gt_fs.c  gt_fs.h  gt_graph_base.c  gt_graph_base.h  gt_handler.c  gt_handler.h  gt_img_decoder.c  gt_img_decoder.h  gt_indev.c  gt_indev.h  gt_layout.c  gt_layout.h  gt_mask.c  gt_mask.h  gt_mem.c  gt_mem.h  gt_obj_pos.c  gt_obj_pos.h  gt_obj_scroll.c  gt_obj_scroll.h  gt_refr.c  gt_refr.h  gt_scr_stack.c  gt_scr_stack.h  gt_style.c  gt_style.h  gt_timer.c  gt_timer.h
src/extra/: gt_extra.c  gt_extra.h  gt_extra.mk
src/font/: gt_font.c  gt_font.h  gt_font.mk  gt_symbol.c  gt_symbol.h
src/hal/: gt_hal.h  gt_hal.mk  gt_hal_disp.c  gt_hal_disp.h  gt_hal_file_header.c  gt_hal_file_header.h  gt_hal_fs.c  gt_hal_fs.h  gt_hal_indev.c  gt_hal_indev.h  gt_hal_src.c  gt_hal_src.h  gt_hal_tick.c  gt_hal_tick.h  gt_hal_vf.c  gt_hal_vf.h
src/others/: gt_anim.c  gt_anim.h  gt_area.c  gt_area.h  gt_assert.h  gt_color.c  gt_color.h  gt_crc.c  gt_crc.h  gt_defs.h  gt_effects.c  gt_effects.h  gt_gc.c  gt_gc.h  gt_list.h  gt_ll.c  gt_ll.h  gt_log.h  gt_math.c  gt_math.h  gt_others.mk  gt_tlsf.c  gt_tlsf.h  gt_txt.c  gt_txt.h  gt_types.h
src/utils/: gt_bin_convert.c  gt_bin_convert.h  gt_img_cache.c  gt_img_cache.h  gt_queue.c  gt_queue.h  gt_serial.c  gt_serial.h  gt_stack.c  gt_stack.h  gt_utils.mk  gt_vector.c  gt_vector.h
src/widgets/: gt_arc.c  gt_arc.h  gt_barcode.c  gt_barcode.h  gt_btn.c  gt_btn.h  gt_btnmap.c  gt_btnmap.h  gt_chat.c  gt_chat.h  gt_checkbox.c  gt_checkbox.h  gt_clock.c  gt_clock.h  (+66 more)
(+114 files in other folders)
